seed successfully working

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "baltimore-happy-hours",
+  "name": "life-organizer-colin-stevens",
   "version": "1.0.0",
   "description": "Baltimore's happy hour information at a glance",
   "main": "server.js",
